@@ -493,6 +493,11 @@
       locale-specific formats are used and caches the locale in use:
       this can halve the time taken on OSes with slow system
       functions (e.g. OS X).
+      
+      \item \code{strptime()} and the \code{format()} methods for
+      classes \code{"POSIXct"}, \code{"POSIXlt"} and \code{"Date"}
+      recognize strings with marked encodings: this allows, for example,
+      UTF-8 French month names to be read on (French) Windows.
     }
   }
 
@@ -686,6 +691,12 @@
 
       \item The count of observations used by \code{KalmanRun()} did not
       take missing values into account.
+      
+      \item In locales where the abbreviated name of one month is a
+      partial match for the full name of a later one, the \code{\%B}
+      format in \code{strptime()} could fail.  An example was French on
+      OS X, where \samp{juin} is abbreviated to \samp{jui} and partially
+      matches \code{juillet}.  Similarly for weekday names.
     }
   }
 }
